iter_language/tests/corpus/valid/queue-shell-minimal.iter
queue shell {
  enqueue = "true"
  dequeue = "true"
}

workspace local {
  base = "."
}

agent claude {
  mode = print
  command = "claude"
}

prompt "do the thing"
runner { continue_on_error = false  behavior = wait }
